--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,22 +1,17 @@
 modLoader="javafml"
 loaderVersion="[46,)"
-license="MIT License"
-#issueTrackerURL="https://change.me.to.your.issue.tracker.example.invalid/" #TODO
+license="MIT"
+issueTrackerURL="https://github.com/FirEmerald/FECore/issues"
 [[mods]]
 modId="fecore"
 version="${file.jarVersion}"
-displayName="FE Core"
-# A URL to query for updates for this mod. See the JSON update specification https://mcforge.readthedocs.io/en/latest/gettingstarted/autoupdate/
-#updateJSONURL="https://change.me.example.invalid/updates.json" #optional
-# A URL for the "homepage" for this mod, displayed in the mod UI
-#displayURL="https://change.me.to.your.mods.homepage.example.invalid/" #optional
+displayName="FECore"
+#updateJSONURL="https://change.me.example.invalid/updates.json"
+displayURL="https://github.com/FirEmerald/FECore"
 logoFile="logo.png"
-credits="FirEmerald"
+#credits=""
 authors="FirEmerald"
-description='''
-Core dependency for FirEmerald's mods as of the great 1.18.2-ening.
-Contains helper code and implementations for more dynamic GUI, XML-based data loading, and entity selection shapes.
-'''
+description='''Provides shared code for FirEmerald's Minecraft mods'''
 [[dependencies.fecore]]
     modId="minecraft"
     mandatory=true
